config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2024-02-20T11:17:01Z","generation":2,"labels":{"app":"pacman"},"name":"pacman","namespace":"pacman","resourceVersion":"23504","uid":"3ac2991e-e450-4fe8-adb0-2520fd2b48ce"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"pacman"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%" [...]
  creationTimestamp: "2024-02-20T11:17:01Z"
  generation: 9
  labels:
    app: pacman
  name: pacman
  namespace: pacman
  resourceVersion: "30767"
  uid: 3ac2991e-e450-4fe8-adb0-2520fd2b48ce
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pacman
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      containers:
      - image: ghcr.io/danielsousactw/pacman:2.0
        imagePullPolicy: IfNotPresent
        name: pacman
        resources:
          requests:
            cpu: 1m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  conditions:
  - lastTransitionTime: "2024-02-20T11:17:01Z"
    lastUpdateTime: "2024-02-21T13:00:05Z"
    message: ReplicaSet "pacman-5bb4c6859d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-02-22T11:17:56Z"
    lastUpdateTime: "2024-02-22T11:17:56Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 9
  readyReplicas: 5
  replicas: 5
  updatedReplicas: 5
