hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pacman-app
  name: pacman
spec:
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          requests:
            cpu: 10m
