ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"creationTimestamp":"2024-02-21T12:01:14Z","generation":1,"labels":{"app.kubernetes.io/instance":"pacman-app"},"name":"pacman","namespace":"pacman","resourceVersion":"30770","uid":"0d326399-b80a-418e-ae0b-fcb812840abf"},"spec":{"ingressClassName":"nginx","rules":[{"host":"pacman.local","http":{"paths":[{"backend":{"service":{"name":"pacman","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]},"status" [...]
  creationTimestamp: "2024-02-21T12:01:14Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: pacman-app
  name: pacman
  resourceVersion: "41512"
  uid: 0d326399-b80a-418e-ae0b-fcb812840abf
spec:
  ingressClassName: nginx
  rules:
  - host: pacman.local
    http:
      paths:
      - backend:
          service:
            name: pacman
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
