service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-02-20T11:19:17Z"
  labels:
    app: pacman
    app.kubernetes.io/instance: pacman-app
  name: pacman
spec:
  clusterIP: 10.98.188.222
  clusterIPs:
  - 10.98.188.222
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pacman
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
